--- a/Lesson3HW/1/index.html
+++ b/Lesson3HW/1/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-<div class="xxx">
-    <div class="a"></div>
-    <div class="b"></div>
-    <div class="c"></div>
+<div class="container">
+    <div class="header"></div>
+    <div class="left_side"></div>
+    <div class="right_side"></div>
 </div>
 
 
