--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -118,6 +118,16 @@
 
     </div>
 
+    <div class="time__work">
+        <div class="time__work__info">
+            <img src="img/time%20.png" alt="clock">
+            <div class="clock__img">
+                <h4>Мы работаем: будни - 9:00-21:00
+                    <br> сб. - 10:00-15:00</h4>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
