--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML_Final</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/Normalize.css">
     <link rel="stylesheet" href="css/styleMiniBar.css">
     <link rel="stylesheet" href="css/style.css">
@@ -128,8 +130,103 @@
         </div>
     </div>
 
+    <div class="strt">
+        <img src="img/GPS_BLACK.png" alt="GPS">
+        <p>Невский пр-т, д. 45</p>
+    </div>
+
+    <div class="our__whatsapp">
+        <img src="img/green_call.png" alt="call">
+        <p>Напишите нам в WhatsApp</p>
+    </div>
+
+    <div class="our_phone">
+        <h3>+7 383 291 92 86</h3>
+        <p>форма обратной связи</p>
+    </div>
+
+    <div class="header__bottom">
+        <div class="catalog__button">
+            <div class="yyy">
+                <div class="xxx"></div>
+            </div>
+            <h3>Каталог</h3>
+        </div>
+
+        <div class="search__bar">
+            <input type="text" placeholder="Поиск по наименованию или артикулу">
+            <div class="search_button">
+                <button>Найти</button>
+            </div>
+
+        </div>
+
+        <div class="in-love-basket">
+            <img src="img/man.png" alt="login">
+            <p>Войти</p>
+            <div></div>
+            <img src="img/love.png" alt="favorites">
+            <p>Избранное</p>
+            <div></div>
+            <img src="img/basker_black.png" alt="basket">
+            <p>В корзине <br>
+                нет товаров</p>
+        </div>
+
+    </div>
+
 </div>
 
+    <div class="mid">
+        <div class="slaider">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="img/GPS_BLACK.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="img/love.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="i" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
 
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 </html>
