--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -13,214 +13,190 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="minibar">
-    <div class="your__city">
-        <div class="window__text">
-            <h2>Выберите свой город</h2>
-            <img src="img/close%201.png" alt="close">
-        </div>
-        <label>
-            <input type="text" placeholder="Ваш город">
-        </label>
-        <ul class="cities">
-            <li>Москва</li>
-            <li>Санкт-Петербург</li>
-            <li>Краснодар</li>
-            <li>Екатеринбург</li>
-            <li>Ростов-на-Дону</li>
-            <li>Самара</li>
-        </ul>
-    </div>
-
-    <div class="Request_a_call">
-        <div class="window__text">
-            <h2>Заказать звонок</h2>
-            <img src="img/close%201.png" alt="close">
-        </div>
-        <div class="your_name">
-            <p>Ваше имя</p>
-            <input type="text">
-        </div>
-        <div class="your__tel">
-            <p>Номер телефона</p>
-            <input type="tel" placeholder="+7 (999) 999-99-99">
-            <img src="img/rashka.png" alt="">
-        </div>
-        <div class="call_btn">
-            <button>Заказать звонок</button>
-        </div>
-    </div>
-
-    <div class="search_item">
-        <div class="need_item">
-            <h3>Найденные трансмиссии:</h3>
-            <h4 class="bgh4">6eT40</h4>
-            <h4>6eT40</h4>
-            <h4>6eT40</h4>
-        </div>
-        <div class="all_item">
-            <h3>Найденные товары:</h3>
-            <h4>Насос - Артикул / 43233</h4>
-            <h4>Соленоид - Артикул / 4493934-22</h4>
-        </div>
-    </div>
-    <div class="basket">
-        <img src="img/kolca.png" alt="kolca">
-        <div class="basket_text">
-            <h3>Товар добавлен в корзину</h3>
-            <p>Intermediate accumelator sleeve</p>
-        </div>
-        <div class="close_button"><img src="img/close%201.png" alt="close"></div>
-    </div>
-</div>
-
-<div class="header__top">
-    <div class="header__top__left">
-        <div class="gps_img">
-            <img src="img/GPS.png" alt="GPS">
-            <h4>Ваш город: <span>Москва</span></h4>
+<div class="box">
+    <div class="minibar">
+        <div class="your__city">
+            <div class="window__text">
+                <h2>Выберите свой город</h2>
+                <img src="img/close%201.png" alt="close">
+            </div>
+            <label>
+                <input type="text" placeholder="Ваш город">
+            </label>
+            <ul class="cities">
+                <li>Москва</li>
+                <li>Санкт-Петербург</li>
+                <li>Краснодар</li>
+                <li>Екатеринбург</li>
+                <li>Ростов-на-Дону</li>
+                <li>Самара</li>
+            </ul>
         </div>
 
-
-        <div class="ptichka_img">
-            <h4>Информация</h4>
-            <img src="img/pticadown.png" alt="pticadown">
-        </div>
-        <div class="ptichka_img">
-            <h4>Сотрудничество</h4>
-            <img src="img/pticadown.png" alt="pticadown">
-        </div>
-    </div>
-
-    <div class="header__top__right">
-        <ul>
-            <li>Доставка</li>
-            <li>Оплата</li>
-            <li>Гарантия</li>
-            <li>Новости</li>
-            <li>Журнал</li>
-            <li>О магазине</li>
-            <li>Контакты</li>
-        </ul>
-
-    </div>
-
-</div>
-
-<div class="header">
-    <div class="info__top">
-        <div class="logo_shop">
-            <img src="img/AVT-ZAP-logo.png" alt="LOGO">
-            <div class="info_logo_shop">
-                <h3>AVT-ZAP</h3>
-                <p>Интернет-магазин запчастей <br>для АКПП</p>
+        <div class="Request_a_call">
+            <div class="window__text">
+                <h2>Заказать звонок</h2>
+                <img src="img/close%201.png" alt="close">
+            </div>
+            <div class="your_name">
+                <p>Ваше имя</p>
+                <input type="text">
+            </div>
+            <div class="your__tel">
+                <p>Номер телефона</p>
+                <input type="tel" placeholder="+7 (999) 999-99-99">
+                <img src="img/rashka.png" alt="">
+            </div>
+            <div class="call_btn">
+                <button>Заказать звонок</button>
             </div>
         </div>
 
-
-    </div>
-
-    <div class="time__work">
-        <div class="time__work__info">
-            <img src="img/time%20.png" alt="clock">
-            <div class="clock__img">
-                <h4>Мы работаем: будни - 9:00-21:00
-                    <br> сб. - 10:00-15:00</h4>
+        <div class="search_item">
+            <div class="need_item">
+                <h3>Найденные трансмиссии:</h3>
+                <h4 class="bgh4">6eT40</h4>
+                <h4>6eT40</h4>
+                <h4>6eT40</h4>
+            </div>
+            <div class="all_item">
+                <h3>Найденные товары:</h3>
+                <h4>Насос - Артикул / 43233</h4>
+                <h4>Соленоид - Артикул / 4493934-22</h4>
             </div>
         </div>
-    </div>
-
-    <div class="strt">
-        <img src="img/GPS_BLACK.png" alt="GPS">
-        <p>Невский пр-т, д. 45</p>
-    </div>
-
-    <div class="our__whatsapp">
-        <img src="img/green_call.png" alt="call">
-        <p>Напишите нам в WhatsApp</p>
-    </div>
-
-    <div class="our_phone">
-        <h3>+7 383 291 92 86</h3>
-        <p>форма обратной связи</p>
-    </div>
-
-    <div class="header__bottom">
-        <div class="catalog__button">
-            <div class="yyy">
-                <div class="xxx"></div>
+        <div class="basket">
+            <img src="img/kolca.png" alt="kolca">
+            <div class="basket_text">
+                <h3>Товар добавлен в корзину</h3>
+                <p>Intermediate accumelator sleeve</p>
             </div>
-            <h3>Каталог</h3>
+            <div class="close_button"><img src="img/close%201.png" alt="close"></div>
         </div>
-
-        <div class="search__bar">
-            <input type="text" placeholder="Поиск по наименованию или артикулу">
-            <div class="search_button">
-                <button>Найти</button>
-            </div>
-
-        </div>
-
-        <div class="in-love-basket">
-            <img src="img/man.png" alt="login">
-            <p>Войти</p>
-            <div></div>
-            <img src="img/love.png" alt="favorites">
-            <p>Избранное</p>
-            <div></div>
-            <img src="img/basker_black.png" alt="basket">
-            <p>В корзине <br>
-                нет товаров</p>
-        </div>
-
     </div>
 
-</div>
-
-    <div class="mid">
-        <div class="slaider">
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="header__top">
+        <div class="wrapper">
+            <div class="header__top__left">
+                <div class="gps_img">
+                    <img src="img/GPS.png" alt="GPS">
+                    <h4>Ваш город: <span>Москва</span></h4>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="img/GPS_BLACK.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="img/love.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="i" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
+
+
+                <div class="ptichka_img">
+                    <h4>Информация</h4>
+                    <img src="img/pticadown.png" alt="pticadown">
+                </div>
+                <div class="ptichka_img">
+                    <h4>Сотрудничество</h4>
+                    <img src="img/pticadown.png" alt="pticadown">
+                </div>
+            </div>
+
+            <div class="header__top__right">
+                <ul>
+                    <li><a href="#">Доставка</a></li>
+                    <li>Оплата</li>
+                    <li>Гарантия</li>
+                    <li>Новости</li>
+                    <li>Журнал</li>
+                    <li>О магазине</li>
+                    <li>Контакты</li>
+                </ul>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="header">
+        <div class="wrapper">
+            <div class="info__top">
+                <div class="logo_shop">
+                    <img src="img/AVT-ZAP-logo.png" alt="LOGO">
+                    <div class="info_logo_shop">
+                        <h3>AVT-ZAP</h3>
+                        <p>Интернет-магазин запчастей <br>для АКПП</p>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            </div>
+
+            <div class="time__work">
+                <div class="time__work__info">
+                    <img src="img/time%20.png" alt="clock">
+                    <div class="clock__img">
+                        <h4>Мы работаем: будни - 9:00-21:00
+                            <br> сб. - 10:00-15:00</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="strt">
+                <img src="img/GPS_BLACK.png" alt="GPS">
+                <p>Невский пр-т, д. 45</p>
+            </div>
+
+            <div class="our__whatsapp">
+                <img src="img/green_call.png" alt="call">
+                <p>Напишите нам в WhatsApp</p>
+            </div>
+
+            <div class="our_phone">
+                <h3><a href="tel:+73832919286">+7 383 291 92 86</a></h3>
+                <p>форма обратной связи</p>
+            </div>
+
+            <div class="header__bottom">
+                <div class="catalog__button">
+                    <div class="yyy">
+                        <div class="xxx"></div>
+                    </div>
+                    <h3>Каталог</h3>
+                </div>
+
+                <div class="search__bar">
+                    <form action="#">
+                        <input type="text" placeholder="Поиск по наименованию или артикулу">
+                        <button class="search_button">Найти</button>
+                    </form>
+
+                </div>
+
+                <div class="in-love-basket">
+                    <img src="img/man.png" alt="login">
+                    <p>Войти</p>
+                    <div></div>
+                    <img src="img/love.png" alt="favorites">
+                    <p>Избранное</p>
+                    <div></div>
+                    <img src="img/basker_black.png" alt="basket">
+                    <p>В корзине <br>
+                        нет товаров</p>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+<div class="carousel-item">
+    <div class="banner-item">
+        <div class="banner-item-content">
+            <h3>Сцепление в сборе</h3>
+            <div class="art">0AMCLUTCH</div>
+            <div class="price">
+                <p>14 499,99 ₽ <span>18 550,99 ₽ </span></p>
+            </div>
+            <div class="banner-item-btn">
+                <button>В корзину</button>
             </div>
         </div>
     </div>
-
-
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
