--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -24,12 +24,12 @@
                 <input type="text" placeholder="Ваш город">
             </label>
             <ul class="cities">
-                <li>Москва</li>
-                <li>Санкт-Петербург</li>
-                <li>Краснодар</li>
-                <li>Екатеринбург</li>
-                <li>Ростов-на-Дону</li>
-                <li>Самара</li>
+                <li><a href="#" style="color: #0d6efd">Москва</a></li>
+                <li><a href="#">Санкт-Петербург</a></li>
+                <li><a href="#">Краснодар</a></li>
+                <li><a href="#">Екатеринбург</a></li>
+                <li><a href="#">Ростов-на-Дону</a></li>
+                <li><a href="#">Самара</a></li>
             </ul>
         </div>
 
@@ -181,22 +181,146 @@
     </div>
 </div>
 
+<div class="sales_info_panel wrapper ">
+    <div class="slaider ">
+        <div id="carouselWithIndicators" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true"></li>
+                <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="1" class=""></li>
+                <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="2" class=""></li>
+            </ol>
+            <div class="carousel-inner  ">
+                <div class="carousel-item active ">
+                    <div class="qwerty">
+                        <div class="banner-info">
+                            <div class="banner-item-content">
+                                <h3>Сцепление в сборе</h3>
+                            </div>
+                            <div class="art">0AMCLUTCH</div>
+                            <div class="price">
+                                <p>14 499,99 ₽ <span>18 550,99 ₽ </span></p>
+                            </div>
+                            <div class="banner-item-btn">
+                                <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                            </div>
+                        </div>
+                        <div class="img-banner">
+                            <img src="img/сцепление.png" alt="Slide 1">
+                        </div>
 
+                    </div>
+                </div>
 
-<div class="carousel-item">
-    <div class="banner-item">
-        <div class="banner-item-content">
-            <h3>Сцепление в сборе</h3>
-            <div class="art">0AMCLUTCH</div>
-            <div class="price">
-                <p>14 499,99 ₽ <span>18 550,99 ₽ </span></p>
+                <div class="carousel-item">
+                    <div class="qwerty">
+                        <div class="banner-info">
+                            <div class="banner-item-content">
+                                <h3>ДИФФЕРЕНЦИАЛ</h3>
+                            </div>
+                            <div class="art">4T65E (VOLVO AWD)</div>
+                            <div class="price">
+                                <p>15 500,00 ₽ <span>18 550,99 ₽ </span></p>
+                            </div>
+                            <div class="banner-item-btn">
+                                <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                            </div>
+                        </div>
+                        <div class="img-banner">
+                            <img src="img/диференциал.png" alt="Slide 2">
+                        </div>
+
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <div class="qwerty">
+                        <div class="banner-info">
+                            <div class="banner-item-content">
+                                <h3>КОМПЛЕКТ КОНУСОВ</h3>
+                            </div>
+                            <div class="art">JF016E</div>
+                            <div class="price">
+                                <p>35 420,00 ₽ <span>39 999,99 ₽ </span></p>
+                            </div>
+                            <div class="banner-item-btn">
+                                <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                            </div>
+                        </div>
+                        <div class="img-banner">
+                            <img src="img/комплект_кон.png" alt="Slide 3">
+                        </div>
+
+                    </div>
+                </div>
             </div>
-            <div class="banner-item-btn">
-                <button>В корзину</button>
+            <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselWithIndicators" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
+        </div>
+
+    </div>
+    <div class="sales">
+        <div class="sales_top">
+            <div class="sales_left_side">
+                <p>Акция</p>
+                <img src="img/обгонная_муфта_гидротранс.png" alt="myfta">
+            </div>
+            <div class="sales_right_side">
+                <div class="text_panel">
+                    <p>Обгонная муфта
+                        гидротрансформатор</p>
+                </div>
+                <div class="art_panel">
+                    <p>BW-SP-2 SONNAX</p>
+                </div>
+                <div class="price-and-btn">
+                    <div class="sales_nav_panel">
+                        <div class="sales_price">
+                            <p>4 430₽ <span>5 430₽</span></p>
+                        </div>
+                    </div>
+                    <div class="sales_nav_btn">
+                        <button><img src="img/basket_white.png" alt="basket"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sales_buttom">
+            <div class="sales_left_side">
+                <p>Акция</p>
+                <img src="img/комл_фрикц_диск.png" alt="fd">
+            </div>
+            <div class="sales_right_side">
+                <div class="text_panel">
+                    <p>Обгонная муфта
+                        гидротрансформатор</p>
+                </div>
+                <div class="art_panel">
+                    <p>BW-SP-2 SONNAX</p>
+                </div>
+                <div class="price-and-btn">
+                    <div class="sales_nav_panel">
+                        <div class="sales_price">
+                            <p>4 430₽ <span>5 430₽</span></p>
+                        </div>
+                    </div>
+                    <div class="sales_nav_btn">
+                        <button><img src="img/basket_white.png" alt="basket"></button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+
 </div>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
