--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -320,7 +320,19 @@
 
 </div>
 
-
+<div class="mid wrapper">
+    <div class="nav_item_btn">
+        <div class="podbor_tovarov">
+            <button>Подборки товаров</button>
+        </div>
+        <div class="podbor_tovarov_sales">
+            <button>Акции</button>
+        </div>
+        <div class="podbor_tovarov_nowbuy">
+            <button>Сейчас покупают</button>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
