--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -332,6 +332,31 @@
             <button>Сейчас покупают</button>
         </div>
     </div>
+
+
+    <div class="main__item__blocks">
+        <div class="mid__sales__block">
+            <div class="sales__block__img">
+                <img src="img/interm_accu_sle.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <img src="img/Star%202.png" alt="star">
+                <span>4.5</span>
+                <p>10 отзывов</p>
+                <h4>Intermediate accumelator sleeve</h4>
+                <p class="mid__price_block">ЦЕНА <span>по запросу</span></p>
+                <div class="sales_block_nav">
+                    <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
