--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -8,6 +8,8 @@
     <title>HTML_Final</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/Normalize.css">
     <link rel="stylesheet" href="css/styleMiniBar.css">
     <link rel="stylesheet" href="css/style.css">
@@ -320,6 +322,103 @@
 
 </div>
 
+<div class="owl-carousel owl-theme wrapper ">
+    <div class="slide_1">
+        <div class="into_block_info">
+            <p class="carousel__text">Масла</p>
+            <div class="carousel__description">
+                <p>Трансмиссионное масло;<br>
+                    присалка в масло акпп</p>
+            </div>
+            <div class="carousel__btn">
+                <button>Перейти</button>
+            </div>
+        </div>
+        <div class="carousel__img">
+            <img src="img/maslaTayota.png" alt="oil">
+        </div>
+
+    </div>
+    <div class="slide_1">
+        <div class="into_block_info">
+            <p class="carousel__text">Фильтры</p>
+            <div class="carousel__description">
+                <p>Масляный фильтр;<br>фильтр воздушный</p>
+            </div>
+            <div class="carousel__btn">
+                <button>Перейти</button>
+            </div>
+        </div>
+        <div class="carousel__img">
+            <img src="img/filtr.png" alt="oil">
+        </div>
+
+    </div>
+    <div class="slide_1">
+        <div class="into_block_info">
+            <p class="carousel__text">Радиаторы</p>
+            <div class="carousel__description">
+                <p>Дополнительные;<br>
+                    радиаторы</p>
+            </div>
+            <div class="carousel__btn">
+                <button>Перейти</button>
+            </div>
+        </div>
+        <div class="carousel__img">
+            <img src="img/radiator.png" alt="oil">
+        </div>
+
+    </div>
+    <div class="slide_1">
+        <div class="into_block_info">
+            <p class="carousel__text">Масла</p>
+            <div class="carousel__description">
+                <p>Трансмиссионное масло;<br>
+                    присалка в масло акпп</p>
+            </div>
+            <div class="carousel__btn">
+                <button>Перейти</button>
+            </div>
+        </div>
+        <div class="carousel__img">
+            <img src="img/maslaTayota.png" alt="oil">
+        </div>
+
+    </div>
+    <div class="slide_1">
+        <div class="into_block_info">
+            <p class="carousel__text">Фильтры</p>
+            <div class="carousel__description">
+                <p>Масляный фильтр;<br>фильтр воздушный</p>
+            </div>
+            <div class="carousel__btn">
+                <button>Перейти</button>
+            </div>
+        </div>
+        <div class="carousel__img">
+            <img src="img/filtr.png" alt="oil">
+        </div>
+
+    </div>
+    <div class="slide_1">
+        <div class="into_block_info">
+            <p class="carousel__text">Радиаторы</p>
+            <div class="carousel__description">
+                <p>Дополнительные;<br>
+                    радиаторы</p>
+            </div>
+            <div class="carousel__btn">
+                <button>Перейти</button>
+            </div>
+        </div>
+        <div class="carousel__img">
+            <img src="img/radiator.png" alt="oil">
+        </div>
+
+    </div>
+</div>
+
 <div class="mid wrapper">
     <div class="nav_item_btn">
         <div class="podbor_tovarov">
@@ -333,22 +432,52 @@
         </div>
     </div>
 
-
-    <div class="main__item__blocks">
-        <div class="mid__sales__block">
+    <div class="mid__sales__block">
+        <div class="main__item__blocks">
             <div class="sales__block__img">
                 <img src="img/interm_accu_sle.png" alt="acu">
             </div>
             <div class="sales__block_rate">
-                <img src="img/Star%202.png" alt="star">
-                <span>4.5</span>
-                <p>10 отзывов</p>
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5<span>10 отзывов</span>
+                </p>
                 <h4>Intermediate accumelator sleeve</h4>
-                <p class="mid__price_block">ЦЕНА <span>по запросу</span></p>
+                <div class="price_info">
+                    <p class="mid__price_block">
+                    <div>ЦЕНА</div>
+                    <a href="#">по запросу</a></p></div>
                 <div class="sales_block_nav">
-                    <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
                     <div class="sales__favors">
-                        <a href="#"><img src="img/love.png" alt="favor"></a>
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="main__item__blocks">
+
+            <div class="sales__block__img">
+                <img src="img/diski_complect.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5 <span>10 отзывов</span>
+                </p>
+                <h4>Комплект фрикционных дисков</h4>
+                <p class="mid__price_block">4 430₽ <span class="old_price">5 430₽</span></p>
+                <div class="sales_block_nav">
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
                     </div>
                     <div class="diag">
                         <a href="#"><img src="img/diagram.png" alt="dia"></a>
@@ -356,9 +485,233 @@
                 </div>
             </div>
         </div>
+
+        <div class="main__item__blocks">
+            <div class="sales__block__img">
+                <img src="img/interm_accu_sle.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5<span>10 отзывов</span>
+                </p>
+                <h4>Intermediate accumelator sleeve</h4>
+                <div class="price_info">
+                    <p class="mid__price_block">
+                    <div>ЦЕНА</div>
+                    <a href="#">по запросу</a></p></div>
+                <div class="sales_block_nav">
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="main__item__blocks">
+            <div class="sales__block__img">
+                <img src="img/prokladka.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5<span>10 отзывов</span>
+                </p>
+                <h4>Intermediate accumelator sleeve</h4>
+                <div class="price_info">
+                    <p class="mid__price_block">
+                    <div>ЦЕНА</div>
+                    <a href="#">по запросу</a></p></div>
+                <div class="sales_block_nav">
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="hor_line"></div>
+
+        <div class="main__item__blocks">
+            <div class="sales__block__img">
+                <img src="img/interm_accu_sle.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5<span>10 отзывов</span>
+                </p>
+                <h4>Intermediate accumelator sleeve</h4>
+                <div class="price_info">
+                    <p class="mid__price_block">
+                    <div>ЦЕНА</div>
+                    <a href="#">по запросу</a></p></div>
+                <div class="sales_block_nav">
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="main__item__blocks">
+
+            <div class="sales__block__img">
+                <img src="img/diski_complect.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5 <span>10 отзывов</span>
+                </p>
+                <h4>Комплект фрикционных дисков</h4>
+                <p class="mid__price_block">4 430₽ <span class="old_price">5 430₽</span></p>
+                <div class="sales_block_nav">
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="main__item__blocks">
+            <div class="sales__block__img">
+                <img src="img/interm_accu_sle.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5<span>10 отзывов</span>
+                </p>
+                <h4>Intermediate accumelator sleeve</h4>
+                <div class="price_info">
+                    <p class="mid__price_block">
+                    <div>ЦЕНА</div>
+                    <a href="#">по запросу</a></p></div>
+                <div class="sales_block_nav">
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="main__item__blocks">
+            <div class="sales__block__img">
+                <img src="img/prokladka.png" alt="acu">
+            </div>
+            <div class="sales__block_rate">
+                <p><img src="img/Star%202.png" alt="star">
+                    4.5<span>10 отзывов</span>
+                </p>
+                <h4>Intermediate accumelator sleeve</h4>
+                <div class="price_info">
+                    <p class="mid__price_block">
+                    <div>ЦЕНА</div>
+                    <a href="#">по запросу</a></p></div>
+                <div class="sales_block_nav">
+                    <div class="sales_block_button">
+                        <button><img src="img/basket_white.png" alt="basket"> В корзину</button>
+                    </div>
+                    <div class="sales__favors">
+                        <a href="#"><img src="img/love_blue.png" alt="favor"></a>
+                    </div>
+                    <div class="diag">
+                        <a href="#"><img src="img/diagram.png" alt="dia"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="mid_all_btn">
+            <button>Показать еще</button>
+        </div>
+
+
     </div>
 </div>
 
+
+<div class="mid__down">
+    <div class="news wrapper">
+        <p>НОВОСТИ</p>
+    </div>
+    <div class="hr__bottom_news"></div>
+    <div class="all__news_block wrapper">
+        <div class="block">
+        <div class="circle wrapper"></div>
+            <div class="border__news wrapper"></div>
+                <div class="news_block wrapper">
+                    <p>3 ноября</p>
+                </div>
+        </div>
+        <div class="block2">
+            <div class="circle wrapper"></div>
+            <div class="border__news wrapper"></div>
+            <div class="news_block wrapper">
+                <p>3 ноября</p>
+            </div>
+        </div>
+        <div class="block3">
+            <div class="circle wrapper"></div>
+            <div class="border__news wrapper"></div>
+            <div class="news_block wrapper">
+                <p>3 ноября</p>
+            </div>
+        </div>
+        <div class="block4">
+            <div class="circle wrapper"></div>
+            <div class="border__news wrapper"></div>
+            <div class="news_block wrapper">
+                <p>3 ноября</p>
+            </div>
+        </div>
+
+
+
+    </div>
+
+
+
+</div>
+
+
+</div>
+
+
+<script src="js/jquery.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
