--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -16,66 +16,66 @@
 </head>
 <body>
 <div class="box">
-    <div class="minibar">
-        <div class="your__city">
-            <div class="window__text">
-                <h2>Выберите свой город</h2>
-                <img src="img/close%201.png" alt="close">
-            </div>
-            <label>
-                <input type="text" placeholder="Ваш город">
-            </label>
-            <ul class="cities">
-                <li><a href="#" style="color: #0d6efd">Москва</a></li>
-                <li><a href="#">Санкт-Петербург</a></li>
-                <li><a href="#">Краснодар</a></li>
-                <li><a href="#">Екатеринбург</a></li>
-                <li><a href="#">Ростов-на-Дону</a></li>
-                <li><a href="#">Самара</a></li>
-            </ul>
-        </div>
+    <!--    <div class="minibar">-->
+    <!--        <div class="your__city">-->
+    <!--            <div class="window__text">-->
+    <!--                <h2>Выберите свой город</h2>-->
+    <!--                <img src="img/close%201.png" alt="close">-->
+    <!--            </div>-->
+    <!--            <label>-->
+    <!--                <input type="text" placeholder="Ваш город">-->
+    <!--            </label>-->
+    <!--            <ul class="cities">-->
+    <!--                <li><a href="#" style="color: #0d6efd">Москва</a></li>-->
+    <!--                <li><a href="#">Санкт-Петербург</a></li>-->
+    <!--                <li><a href="#">Краснодар</a></li>-->
+    <!--                <li><a href="#">Екатеринбург</a></li>-->
+    <!--                <li><a href="#">Ростов-на-Дону</a></li>-->
+    <!--                <li><a href="#">Самара</a></li>-->
+    <!--            </ul>-->
+    <!--        </div>-->
 
-        <div class="Request_a_call">
-            <div class="window__text">
-                <h2>Заказать звонок</h2>
-                <img src="img/close%201.png" alt="close">
-            </div>
-            <div class="your_name">
-                <p>Ваше имя</p>
-                <input type="text">
-            </div>
-            <div class="your__tel">
-                <p>Номер телефона</p>
-                <input type="tel" placeholder="+7 (999) 999-99-99">
-                <img src="img/rashka.png" alt="">
-            </div>
-            <div class="call_btn">
-                <button>Заказать звонок</button>
-            </div>
-        </div>
+    <!--        <div class="Request_a_call">-->
+    <!--            <div class="window__text">-->
+    <!--                <h2>Заказать звонок</h2>-->
+    <!--                <img src="img/close%201.png" alt="close">-->
+    <!--            </div>-->
+    <!--            <div class="your_name">-->
+    <!--                <p>Ваше имя</p>-->
+    <!--                <input type="text">-->
+    <!--            </div>-->
+    <!--            <div class="your__tel">-->
+    <!--                <p>Номер телефона</p>-->
+    <!--                <input type="tel" placeholder="+7 (999) 999-99-99">-->
+    <!--                <img src="img/rashka.png" alt="">-->
+    <!--            </div>-->
+    <!--            <div class="call_btn">-->
+    <!--                <button>Заказать звонок</button>-->
+    <!--            </div>-->
+    <!--        </div>-->
 
-        <div class="search_item">
-            <div class="need_item">
-                <h3>Найденные трансмиссии:</h3>
-                <h4 class="bgh4">6eT40</h4>
-                <h4>6eT40</h4>
-                <h4>6eT40</h4>
-            </div>
-            <div class="all_item">
-                <h3>Найденные товары:</h3>
-                <h4>Насос - Артикул / 43233</h4>
-                <h4>Соленоид - Артикул / 4493934-22</h4>
-            </div>
-        </div>
-        <div class="basket">
-            <img src="img/kolca.png" alt="kolca">
-            <div class="basket_text">
-                <h3>Товар добавлен в корзину</h3>
-                <p>Intermediate accumelator sleeve</p>
-            </div>
-            <div class="close_button"><img src="img/close%201.png" alt="close"></div>
-        </div>
-    </div>
+    <!--        <div class="search_item">-->
+    <!--            <div class="need_item">-->
+    <!--                <h3>Найденные трансмиссии:</h3>-->
+    <!--                <h4 class="bgh4">6eT40</h4>-->
+    <!--                <h4>6eT40</h4>-->
+    <!--                <h4>6eT40</h4>-->
+    <!--            </div>-->
+    <!--            <div class="all_item">-->
+    <!--                <h3>Найденные товары:</h3>-->
+    <!--                <h4>Насос - Артикул / 43233</h4>-->
+    <!--                <h4>Соленоид - Артикул / 4493934-22</h4>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="basket">-->
+    <!--            <img src="img/kolca.png" alt="kolca">-->
+    <!--            <div class="basket_text">-->
+    <!--                <h3>Товар добавлен в корзину</h3>-->
+    <!--                <p>Intermediate accumelator sleeve</p>-->
+    <!--            </div>-->
+    <!--            <div class="close_button"><img src="img/close%201.png" alt="close"></div>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
     <div class="header__top">
         <div class="wrapper">
@@ -669,38 +669,99 @@
     <div class="hr__bottom_news"></div>
     <div class="all__news_block wrapper">
         <div class="block">
-        <div class="circle wrapper"></div>
-            <div class="border__news wrapper"></div>
+            <div class="main__trio">
+                <div class="circle wrapper"></div>
+                <div class="border__news wrapper"></div>
                 <div class="news_block wrapper">
                     <p>3 ноября</p>
                 </div>
+            </div>
+
+            <div class="info_container">
+                <div class="links_news">
+                    <a href="#">Изменения на сайте</a>
+                </div>
+                <div class="main__news">
+                    <p>Недавно на сайте мы ввели
+                        очередную порцию изменений,
+                        которые, как нам кажется, должны
+                        улучшить функциональность сайта
+                        и сделать его более удобным для
+                        пользователей. Реакция посетителей
+                        не заставила себя долго ждать...</p>
+                </div>
+            </div>
+
         </div>
         <div class="block2">
-            <div class="circle wrapper"></div>
-            <div class="border__news wrapper"></div>
-            <div class="news_block wrapper">
-                <p>3 ноября</p>
+            <div class="main__trio">
+                <div class="circle wrapper"></div>
+                <div class="border__news wrapper"></div>
+                <div class="news_block wrapper">
+                    <p>2 ноября</p>
+                </div>
+            </div>
+            <div class="info_container">
+                <div class="links_news2">
+                    <a href="#">Вышла новая версия для <br>
+                        мобильных приложений</a>
+                </div>
+                <div class="main__news2">
+                    <p>Что нового в 2.0: <br>
+                        — добавлена история поиска; <br>
+                        — добавлена синхронизация с сервером;<br>
+                        — испрвление ошибок.</p>
+                </div>
             </div>
         </div>
         <div class="block3">
-            <div class="circle wrapper"></div>
-            <div class="border__news wrapper"></div>
-            <div class="news_block wrapper">
-                <p>3 ноября</p>
+            <div class="main__trio">
+                <div class="circle wrapper"></div>
+                <div class="border__news wrapper"></div>
+                <div class="news_block wrapper">
+                    <p>1 ноября</p>
+                </div>
+            </div>
+            <div class="info_container">
+                <div class="links_news3">
+                    <a href="#">Очередная порция обновлений для
+                        мобильных приложений</a>
+                </div>
+                <div class="main__news3">
+                    <p>Что нового добавлено:
+                        — поддержка пуш-уведомлений;
+                        — разделы для покупателей;
+                        — просмотр покупателя в заказах;
+                        — возможность поиска;
+                        — исправление ошибок.</p>
+                </div>
             </div>
         </div>
         <div class="block4">
-            <div class="circle wrapper"></div>
-            <div class="border__news wrapper"></div>
-            <div class="news_block wrapper">
-                <p>3 ноября</p>
+            <div class="main__trio">
+                <div class="circle wrapper"></div>
+                <div class="border__news wrapper"></div>
+                <div class="news_block wrapper">
+                    <p>3 ноября</p>
+                </div>
+            </div>
+            <div class="info_container">
+                <div class="links_news4">
+                    <a href="#">Очередная порция обновлений для
+                        мобильных приложений</a>
+                </div>
+                <div class="main__news4">
+                    <p>Он позволяет выводить все
+                        формируемые системой
+                        уведомления(e-mail, смс, web) в
+                        едином окне с системой удобной
+                        фильтрации поиска.</p>
+                </div>
             </div>
         </div>
 
 
-
     </div>
-
 
 
 </div>
