--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -661,7 +661,6 @@
     </div>
 </div>
 
-
 <div class="mid__down">
     <div class="news wrapper">
         <p>НОВОСТИ</p>
@@ -747,8 +746,8 @@
             </div>
             <div class="info_container">
                 <div class="links_news4">
-                    <a href="#">Очередная порция обновлений для
-                        мобильных приложений</a>
+                    <a href="#">Интерфейс заказов для покупателей
+                        стал более функциональным</a>
                 </div>
                 <div class="main__news4">
                     <p>Он позволяет выводить все
@@ -764,6 +763,64 @@
     </div>
 
 
+</div>
+
+<div class="footer">
+    <div class="footer_main_info wrapper">
+        <div class="catalog">
+            <ul><span>КАТАЛОГ</span>
+                <li><a href="#">Каталог запчастей</a></li>
+                <li><a href="#">Масла</a></li>
+                <li><a href="#">Фильтра</a></li>
+                <li><a href="#">Радиаторы</a></li>
+                <li><a href="#">Sonnax</a></li>
+                <li><a href="#">Manual</a></li>
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Акции</a></li>
+            </ul>
+        </div>
+        <div class="rybinator">
+            <ul><span>РУБРИКАТОР</span>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Оплата</a></li>
+                <li><a href="#">Гарантия</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Журнал</a></li>
+                <li><a href="#">О магазине</a></li>
+                <li><a href="#">Контактная информация</a></li>
+            </ul>
+        </div>
+        <div class="footer_info">
+            <ul><span>ИНФОРМАЦИЯ</span>
+                <li><a href="#">Пользовательское соглашение <br>
+                    об использовании персональных данных</a></li>
+                <li><a href="#">Политика конфиденциальности</a></li>
+                <li><a href="#">Соглашение на рассылку <br>
+                    рекламных материалов</a></li>
+                <li><a href="#">Политика возвратов</a></li>
+            </ul>
+            <p>Мы принимаем</p>
+            <img src="img/visa_master.png" alt="cards">
+        </div>
+        <div class="our__contact">
+            <div class="contact">
+                <p>КОНТАКТЫ</p>
+                <div class="phone"><a href="+73832919286">+7 383 291 92 86</a></div>
+                <div class="email"><a href="">info@avt-zap.ru</a></div>
+            </div>
+        </div>
+            <div class="our__adress">
+                <div class="adress">
+                    <span>КОНТАКТЫ</span>
+                    <p>г. Новосибирск,</p>
+                    <p>ул. Планировочная, 5, офис 105</p>
+                </div>
+            </div>
+        <div class="our_forms">
+            <p>Мы онлайн, воспользуйтесь <span>Форма обратной связи</span></p>
+        </div>
+
+    </div>
 </div>
 
 
